final version -> movile gallery navigation improved

--- a/expedicion-palmas-de-cera-y-volcan-machin/index.html
+++ b/expedicion-palmas-de-cera-y-volcan-machin/index.html
@@ -231,7 +231,7 @@
         <p class="section-intro mb-xl text-center">Descubre las experiencias reales de otros entusiastas 4x4 que han participado en nuestras expediciones. Estas imágenes muestran exactamente lo que vivirás en esta aventura.</p>
         
         <div class="gallery-slider" data-autoplay="true" data-interval="4000">
-          <div class="slider-viewport">
+          <div class="slider-viewport" tabindex="0" aria-label="Galería deslizable">
             <div class="slider-track">
               <div class="gallery-item">
                 <div class="gallery-preview">
@@ -326,10 +326,7 @@
               </div>
             </div>
           </div>
-          <div class="slider-controls">
-            <button class="slider-btn prev" aria-label="Anterior">‹</button>
-            <button class="slider-btn next" aria-label="Siguiente">›</button>
-          </div>
+          
         </div>
       </div>
     </section>
