final version -> last details

--- a/expedicion-palmas-de-cera-y-volcan-machin/index.html
+++ b/expedicion-palmas-de-cera-y-volcan-machin/index.html
@@ -33,15 +33,15 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
   <link rel="preload" as="image" href="assets/images/hero_1.webp" fetchpriority="high">
   <link rel="preload" as="image" href="assets/images/logo/logo-final.png" fetchpriority="high">
-  <link rel="preload" as="style" href="assets/design-system.min.css" onload="this.onload=null;this.rel='stylesheet'">
-  <link rel="preload" as="style" href="assets/style.min.css" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" as="style" href="assets/design-system.min.css?v=20250912a" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" as="style" href="assets/style.min.css?v=20250912a" onload="this.onload=null;this.rel='stylesheet'">
   <noscript>
-    <link rel="stylesheet" href="assets/design-system.min.css">
-    <link rel="stylesheet" href="assets/style.min.css">
+    <link rel="stylesheet" href="assets/design-system.min.css?v=20250912a">
+    <link rel="stylesheet" href="assets/style.min.css?v=20250912a">
   </noscript>
-  <link rel="stylesheet" href="assets/layout-consistency.min.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="assets/mobile-enhancements.min.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="assets/simplified-payment-styles.min.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="assets/layout-consistency.min.css?v=20250912a" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="assets/mobile-enhancements.min.css?v=20250912a" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="assets/simplified-payment-styles.min.css?v=20250912a" media="print" onload="this.media='all'">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -194,7 +194,7 @@
 
     <section id="incluye" class="content-section pt-xxl pb-xl">
       <div class="container">
-        <h2 class="section-title mb-xl text-center">Tu Aventura, Completamente Cubierta</h2>
+        <h2 class="section-title mb-xl text-center">Cobertura Total de la Travesía</h2>
         <p class="section-intro mb-l text-center">Nos encargamos de cada detalle para que tú solo te concentres en disfrutar. Desde el hospedaje premium hasta la documentación profesional de tu viaje, todo está pensado para crear una experiencia excepcional.</p>
         
         <div class="inclusion-grid gap-l">
@@ -441,7 +441,7 @@
           <a class="btn btn-primary pulse" href="https://wa.me/573045374705?text=Quiero%20inscribirme%20a%20la%20Expedici%C3%B3n%20Bosque%20de%20Palmas%20%26%20Cerro%20Volc%C3%A1n%20Mach%C3%ADn%20(21-23%20Nov%202025)" target="_blank" rel="noopener noreferrer">
             ¡Reserva tu cupo ahora!
           </a>
-          <p class="cta-urgency">¡Reserva tu cupo ahora y asegura tu lugar en esta experiencia única!</p>
+          <p class="cta-urgency">Cupos limitados. Inscríbete hoy.</p>
       </div>
     </section>
   </main>
@@ -486,7 +486,7 @@
     <p class="copyright">© 2025 4X4 Travel Eje. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="assets/config-loader.min.js" defer></script>
-  <script src="assets/script.min.js" defer></script>
+  <script src="assets/config-loader.min.js?v=20250912a" defer></script>
+  <script src="assets/script.min.js?v=20250912a" defer></script>
 </body>
 </html>
