final version -> improve hero cta

--- a/expedicion-palmas-de-cera-y-volcan-machin/index.html
+++ b/expedicion-palmas-de-cera-y-volcan-machin/index.html
@@ -106,14 +106,19 @@
       </div>
       <p class="expedition-intro mb-xl reveal reveal-stagger-2">Una travesía 4x4 sin igual: adéntrate en el bosque de palmas de cera más grande del mundo en Toche, Tolima. Visita termales volcánicos y el imponente cráter de un volcán vivo. Perfecta para cualquier 4x4, limitada a 10 aventureros selectos.</p>
 
-              <div class="benefits-grid gap-m">
-          <div class="benefit-item p-m">
-            <a href="#incluye" class="btn btn-secondary">Ver todo lo que incluye →</a>
-          </div>
-          <div class="benefit-item p-m">
-            <a href="#itinerario" class="btn btn-secondary">Itinerario completo →</a>
-          </div>
+      <div class="benefits-grid gap-m">
+        <div class="benefit-item p-m">
+          <a href="#itinerario" class="cta-itinerary" aria-label="Ver Itinerario">
+            <span class="text-desktop">Ver Itinerario Completo</span>
+            <span class="text-mobile">Ver Itinerario</span>
+            <span class="cta-arrow" aria-hidden="true">
+              <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor" focusable="false" aria-hidden="true">
+                <path d="M12 16a1 1 0 0 1-.707-.293l-6-6a1 1 0 1 1 1.414-1.414L12 13.586l5.293-5.293a1 1 0 0 1 1.414 1.414l-6 6A1 1 0 0 1 12 16z"/>
+              </svg>
+            </span>
+          </a>
         </div>
+      </div>
     </div>
   </section>
 
