final version -> update album source and hotjar install

--- a/expedicion-palmas-de-cera-y-volcan-machin/index.html
+++ b/expedicion-palmas-de-cera-y-volcan-machin/index.html
@@ -79,6 +79,20 @@
     }
   }
   </script>
+  
+  <!-- Hotjar Tracking Code for https://4x4traveleje.com/expedicion-palmas-de-cera-y-volcan-machin/ -->
+  <script>
+    if (location.hostname === '4x4traveleje.com' || location.hostname === 'www.4x4traveleje.com') {
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:6519272,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    }
+  </script>
 </head>
 <body>
   <div class="scroll-indicator"></div>
@@ -248,7 +262,7 @@
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                       <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
                     </svg>
-                    Google Photos
+                    MyAlbum
                   </div>
                 </div>
                 <div class="gallery-info p-m">
@@ -256,7 +270,7 @@
                   <p class="gallery-description mb-s">Paisajes majestuosos y palmas de cera</p>
                   <span class="photo-count">+150 fotos</span>
                 </div>
-                <a href="https://photos.app.goo.gl/BvyRcjdqs3vTvYcz9" target="_blank" rel="noopener noreferrer" class="gallery-link">
+                <a href="https://myalbum.com/album/Nnk9g66Le3QaTU/?invite=317fb170-b678-4780-bb16-3dd5e9acba43" target="_blank" rel="noopener noreferrer" class="gallery-link">
                   Ver álbum completo →
                 </a>
               </div>
@@ -271,7 +285,7 @@
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                       <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
                     </svg>
-                    Google Photos
+                    MyAlbum
                   </div>
                 </div>
                 <div class="gallery-info p-m">
@@ -279,7 +293,7 @@
                   <p class="gallery-description mb-s">Aventuras 4x4 y vistas panorámicas</p>
                   <span class="photo-count">+120 fotos</span>
                 </div>
-                <a href="https://photos.app.goo.gl/71RbpDh7DwFdfZa4A" target="_blank" rel="noopener noreferrer" class="gallery-link">
+                <a href="https://myalbum.com/album/UzGFAPeyMbGiog/?invite=08ddab21-7a1c-4a80-82c1-27a98a329ce3" target="_blank" rel="noopener noreferrer" class="gallery-link">
                   Ver álbum completo →
                 </a>
               </div>
@@ -294,7 +308,7 @@
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                       <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
                     </svg>
-                    Google Photos
+                    MyAlbum
                   </div>
                 </div>
                 <div class="gallery-info p-m">
@@ -302,7 +316,7 @@
                   <p class="gallery-description mb-s">Naturaleza salvaje y aventura extrema</p>
                   <span class="photo-count">+200 fotos</span>
                 </div>
-                <a href="https://photos.app.goo.gl/ifNRyV9hJCXzAzVt6" target="_blank" rel="noopener noreferrer" class="gallery-link">
+                <a href="https://myalbum.com/album/RgaFHNQffDGbvr/?invite=53560ad9-d2e9-486a-a9d5-c939d88a67e1" target="_blank" rel="noopener noreferrer" class="gallery-link">
                   Ver álbum completo →
                 </a>
               </div>
@@ -317,7 +331,7 @@
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                       <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
                     </svg>
-                    Google Photos
+                    MyAlbum
                   </div>
                 </div>
                 <div class="gallery-info p-m">
@@ -325,7 +339,7 @@
                   <p class="gallery-description mb-s">Travesía 4x4 entre barro y montaña</p>
                   <span class="photo-count">+180 fotos</span>
                 </div>
-                <a href="https://photos.app.goo.gl/TVqkiueDsTZdX22s7" target="_blank" rel="noopener noreferrer" class="gallery-link">
+                <a href="https://myalbum.com/album/jiNo4hoZjrRiq2/?invite=4507d8bb-5ba3-448a-af79-68aab13ff724" target="_blank" rel="noopener noreferrer" class="gallery-link">
                   Ver álbum completo →
                 </a>
               </div>
